--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,18 @@
+postgres:
+  image: postgres
+  environment:
+    - POSTGRES_USER=foosball
+    - POSTGRES_PASSWORD=foosball
 web:
   build: .
   environment:
-    - DATABASE_URL=postgres://foosball:foosball@postgres/foosball
-    - REDIS_URL=redis://redis/
+    - DATABASE_URL=ecto://foosball:foosball@postgres/foosball
     - SECRET_KEY
     - SLACK_CLIENT_ID
     - SLACK_CLIENT_SECRET
     - SLACK_VERIFICATION_TOKEN
+  links:
+    - postgres
   ports:
     - '4000:4000'
   volumes:
